--- a/helix-sitemap.yaml
+++ b/helix-sitemap.yaml
@@ -2,6 +2,7 @@ version: 1
 
 sitemaps:
   default:
+    origin: https://custom.domain.com
     source: /query-index.json
     destination: /sitemap.xml
     lastmod: YYYY-MM-DD
